misc/operator/e2e/tests/ingress/cluster-no-ingress.yaml
apiVersion: ledger-next.formance.com/v1alpha1
kind: Cluster
metadata:
  name: ing-cluster
spec:
  replicas: 1
  image:
    repository: ledger
    tag: e2e
    pullPolicy: Never
  ingress:
    enabled: false
  ingressGrpc:
    enabled: false
