misc/operator/e2e/tests/ingress/cluster.yaml
apiVersion: ledger-next.formance.com/v1alpha1
kind: Cluster
metadata:
  name: ing-cluster
spec:
  replicas: 1
  image:
    repository: ledger
    tag: e2e
    pullPolicy: Never
  ingress:
    enabled: true
    hosts:
      - host: ledger.e2e.local
  ingressGrpc:
    enabled: true
    hosts:
      - host: ledger-next-grpc.e2e.local
