misc/operator/e2e/tests/ingress/ledgerservice.yaml
apiVersion: ledger.formance.com/v1alpha1
kind: LedgerService
metadata:
  name: ing-svc
spec:
  replicas: 1
  image:
    repository: ledger-v3-poc
    tag: e2e
    pullPolicy: Never
  ingress:
    enabled: true
    hosts:
      - host: ledger.e2e.local
  ingressGrpc:
    enabled: true
    hosts:
      - host: ledger-grpc.e2e.local
